--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ samp {
   font-family: monospace, monospace;
   line-height: 1;
   /* 1 */
-  font-size: 0.6em;
+  font-size: 0.75em;
   /* 2 */ }
 
 /**
@@ -403,7 +403,8 @@ body {
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   margin: .5rem 0 1.5rem;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif; }
+  /*font-family: "Open Sans", Helvetica, Arial, sans-serif;*/
+  font-family: 돋음, Dotum, Baekmuk Dotum, Undotum, Apple Gothic, Latin font, sans-serif;}
 
 h1, .h1 {
   font-size: 2em;
