--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
  */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
+
 html {
   line-height: 1.15;
   /* 1 */
@@ -404,7 +406,7 @@ body {
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   margin: .5rem 0 1.5rem;
   /*font-family: "Open Sans", Helvetica, Arial, sans-serif;*/
-  font-family: 돋음, Dotum, Baekmuk Dotum, Undotum, Apple Gothic, Latin font, sans-serif;}
+  font-family: 'Jeju Gothic', sans-serif;}
 
 h1, .h1 {
   font-size: 2em;
