--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
 @import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 html{
   line-height:1.15;
@@ -514,7 +515,8 @@ html{
 }
 
 body{
-  font-family: 'Jeju Gothic', sans-serif;
+  /*font-family: 'Jeju Gothic', sans-serif;*/
+  font-family: 'Nanum Gothic', sans-serif;
   /*font-family: "PT Serif", Georgia, Times, serif;*/
   line-height:1.75;
   font-size:112.5%;
