--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,8 +515,8 @@ html{
 }
 
 body{
-  /*font-family: 'Jeju Gothic', sans-serif;*/
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'Jeju Gothic', sans-serif;
+  /*font-family: 'Nanum Gothic', sans-serif;*/
   /*font-family: "PT Serif", Georgia, Times, serif;*/
   line-height:1.75;
   font-size:112.5%;
