--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -947,7 +947,8 @@ dd{
   }
   
   .container{
-    max-width:880px;
+    //max-width:880px;
+    max-width:720px;
     margin-left:auto;
     margin-right:auto;
     padding:0;
