--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 
    {% include footer.html %}
    {% include scripts.html %}
+   {% include google_analytics.html %}
 
    <script id="dsq-count-scr" src="//hoyas-blog-1.disqus.com/count.js" async></script>
 </body>
