--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -922,7 +922,8 @@ dd{
 
 @media only screen and (min-width:800px){
   body{
-    font-size:125%;
+    /*font-size:125%;*/
+    font-size:100%;
   }
   
   .content{
