pageTitle margin 2 to 5rem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1050,7 +1050,8 @@ dd{
   }
   
   .post .pageTitle{
-    margin:2rem auto 1em;
+    /*margin:2rem auto 1em;*/
+    margin:5rem auto 1em;
   }
   
   .post .featuredImage{
