--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,7 +686,8 @@ dd{
 .post .postTitle{
   text-align:center;
   margin-top:2rem;
-  margin-bottom:1rem;
+  /*margin-bottom:1rem;*/
+  margin-bottom:4rem;
 }
 
 .post blockquote{
