--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1119,7 +1119,8 @@ dd{
 
 @media only screen and (min-width:1200px){
   body{
-    font-size:137.5%;
+    /*font-size:137.5%;*/
+    font-size:100%;
   }
   
   .container{
