--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
     {% if page.image %}
       <meta content="{{ site.url }}/assets/img/{{ page.image }}" property="og:image">
     {% else %}
-      <meta content="{{ '/assets/img/top_image.jpg' | prepend: site.url }}" property="og:image">
+      <meta content="{{ '/assets/img/top_img.jpg' | prepend: site.url }}" property="og:image">
     {% endif %}
 
     <!-- Twitter Cards -->
